# LP1-2022.1-Lista-2

./: README.md
bingo/: CMakeLists.txt  README.md
bingo/include/: BingoRand.hpp
bingo/src/: BingoRand.cpp  main.cpp
casa_e_rua/: CMakeLists.txt  README.md
casa_e_rua/include/: Casa.hpp  rua.hpp
casa_e_rua/src/: main.cpp  rua.cpp
matrizes_com_classe/: CMakeLists.txt  README.md
matrizes_com_classe/data_expected/: in3_OUT.txt
scripts/: inout_casa_e_rua copy.txt
